--- a/scss/style.scss
+++ b/scss/style.scss
@@ -77,20 +77,17 @@
     top: 7.5rem;
     left: 0;
     width: 100vw;
-    height: calc(100vh - 7.5rem);    
-    background: $bg-color;    
+    height: calc(100vh - 7.5rem);
+    background: $bg-color;
     transform: translateX(-100%);
 
-    
-
-    @media only screen and (min-width: 64.0625rem) {
+    @media only screen and (min-width: $medium) {
         width: 50vw !important;
         height: 100vh !important;
         z-index: 0;
         top: unset;
         left: unset;
         transform: unset !important;
-        
     }
 }
 
@@ -143,7 +140,7 @@
 main {
     width: 100vw;
 
-    @media only screen and (min-width: 64.0625rem) {
+    @media only screen and (min-width: $medium) {
         width: 50vw;
         margin-left: 50vw;
         padding-right: 2rem;
@@ -155,7 +152,7 @@ section {
     padding: 0 1.25rem;
     margin-bottom: 3rem;
 
-    @media only screen and (min-width: 64.0625rem) {
+    @media only screen and (min-width: $medium) {
         padding: 0 1.25rem 0 0;
     }
 }
@@ -185,7 +182,7 @@ section {
         height: 100%;
         width: auto;
         margin: 0 auto;
-        transition: transform 1.5s cubic-bezier(.45,.04,.42,1), opacity 1s ease-in;
+        transition: transform 1.5s cubic-bezier(0.45, 0.04, 0.42, 1), opacity 1s ease-in;
     }
 
     .pos1 {
@@ -228,11 +225,19 @@ section {
 .weddings {
     &__headline {
         margin-bottom: 7rem;
+
+        @media only screen and (min-width: $large) {
+            margin-bottom: 10rem;
+        }
     }
 
     &__img-container {
         width: 100%;
         margin-bottom: 5rem;
+
+        @media only screen and (min-width: $large) {
+            margin-bottom: 7rem;
+        }
     }
 
     .upright {
@@ -289,7 +294,6 @@ section {
 
     &__text {
         margin: 3rem 0 3rem 0;
-        text-align: justify;
     }
 
     &__img--full {
@@ -304,8 +308,7 @@ section {
 
 // ##### START SECTION PORTRAITS #####
 
-.portraits {    
-
+.portraits {
     &__headline {
         margin-bottom: 3rem;
     }
@@ -316,56 +319,59 @@ section {
         grid-template-columns: repeat(2, 1fr);
         grid-template-rows: repeat(4, 1fr);
         gap: 0.75rem;
-        //margin-bottom: 3rem;
+        margin-bottom: 3rem;
 
-        @media only screen and (min-width: 64.0625rem) {
+        @media only screen and (min-width: $medium) {
             gap: 1.25rem;
         }
     }
 
-    &__img {
-        width: 100%;
-        height: auto;
-        
+    &__img-wrapper {
         box-shadow: 0 10px 20px -8px rgba(0, 0, 0, 0.3);
     }
 
-    &__img1 {
+    &__img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+
+    &__img-wrapper1 {
         grid-column: 1/2;
         grid-row: 1/2;
     }
 
-    &__img2 {
+    &__img-wrapper2 {
         grid-column: 2/3;
         grid-row: 1/2;
     }
 
-    &__img3 {
+    &__img-wrapper3 {
         grid-column: 1/2;
         grid-row: 2/3;
     }
 
-    &__img4 {
+    &__img-wrapper4 {
         grid-column: 2/3;
         grid-row: 2/3;
     }
 
-    &__img5 {
+    &__img-wrapper5 {
         grid-column: 1/2;
         grid-row: 3/4;
     }
 
-    &__img6 {
+    &__img-wrapper6 {
         grid-column: 2/3;
         grid-row: 3/4;
     }
 
-    &__img7 {
+    &__img-wrapper7 {
         grid-column: 1/2;
         grid-row: 4/5;
     }
 
-    &__img8 {
+    &__img-wrapper8 {
         grid-column: 2/3;
         grid-row: 4/5;
     }
@@ -387,7 +393,7 @@ section {
         gap: 0.75rem;
         margin-bottom: 3rem;
 
-        @media only screen and (min-width: 64.0625rem) {
+        @media only screen and (min-width: $medium) {
             gap: 1.25rem;
         }
     }
@@ -510,7 +516,7 @@ section {
     &__img-container {
         width: 100%;
 
-        @media only screen and (min-width: 64.0625rem) {
+        @media only screen and (min-width: $medium) {
             width: 25vw;
         }
     }
@@ -539,11 +545,9 @@ section {
         grid-template-rows: repeat(10, 1fr);
         gap: 0.75rem;
 
-        @media only screen and (min-width: 64.0625rem) {
+        @media only screen and (min-width: $medium) {
             gap: 1.25rem;
         }
-        
-        
     }
 
     &__img-wrapper {
@@ -726,7 +730,7 @@ section {
     position: fixed;
     top: 0;
     left: 0;
-    background: rgba(0, 0, 0, 0.95);    
+    background: rgba(0, 0, 0, 0.95);
     z-index: 1000;
 
     &__btn--close {
@@ -760,20 +764,23 @@ section {
 
     &__img-wrapper {
         width: 100%;
-        
-        
     }
 
     &__btn-container {
         position: absolute;
-        bottom: 75px;
+        bottom: 7.5rem;
         left: 50vw;
         transform: translateX(-50%);
+
+        @media only screen and (min-width: $medium) {
+            bottom: 4.6875rem;
+        }
     }
 
-    &__btn--prev, &__btn--next {
+    &__btn--prev,
+    &__btn--next {
         width: 50px;
-        height: 50px;                
+        height: 50px;
         display: flex;
         align-items: center;
         justify-content: center;
@@ -784,15 +791,14 @@ section {
             width: 60%;
             height: auto;
         }
-
-        
     }
 
     .up {
         width: 80vmin;
         height: auto;
+        align-self: center;
         //margin: 50% auto;
-        @media only screen and (min-width: 64.0625rem) {
+        @media only screen and (min-width: $medium) {
             width: 50vmin;
         }
     }
@@ -800,8 +806,9 @@ section {
     .acr {
         width: 90vmin;
         height: auto;
+        align-self: center;
         margin-top: 20vh;
-        @media only screen and (min-width: 64.0625rem) {
+        @media only screen and (min-width: $medium) {
             width: 100vmin;
             margin-top: 0;
         }
